--- a/helloangular/src/app/product-list/product-list.component.html
+++ b/helloangular/src/app/product-list/product-list.component.html
@@ -23,6 +23,7 @@
           class="quantity"
           step="1"
           [value]="product.quantity"
+          (input)="updateQuantity(inputQuantityElement)"
         />
       </div>
 
