--- a/windowangular/src/app/cart-summary/cart-summary.component.html
+++ b/windowangular/src/app/cart-summary/cart-summary.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li>Subtotal <span>{{subTotal | currency}}</span></li>
     <li>Tax <span>{{tax | currency}}</span></li>
-    <li class="total">Total <span>{{subTotal + tax | currency}}</span></li>
+    <li class="total">Total <span>{{subTotal + tax - discount | currency}}</span></li>
   </ul>
 </div>
 
